chinh Form main

--- a/ttn_detai5/MainForm.resx
+++ b/ttn_detai5/MainForm.resx
@@ -4134,4 +4134,119 @@
         nL87t1ExpJiGAo2V6cAfOVYSr5elIxAiyuw4f//Z
 </value>
   </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBxMTEhUSEw8QFRUWFRMVEhUSFxISEhIQFhIYGBUSExMY
+        HyggGBolGxUTIjEhKCkrLi4uFyAzODMtNygtLiv/2wBDAQoKCg4NDhoQEBszJR8mNy8wLSsrLTctLSst
+        LS0vLS0vNy0tNy8tLS0tLS0vLSsvLTAtLS8tLS0tLS0tLS0tLS3/wAARCACsASQDAREAAhEBAxEB/8QA
+        GwABAAIDAQEAAAAAAAAAAAAAAAQFAgMGAQf/xABDEAABAgIDCQ0HAwQDAQAAAAABAAIDEQQFIRIVMUFT
+        cZGS0QYTFBYiMlFSVIGhwdIzQlVic6KyYWOxB3Lh8COT8cL/xAAaAQEAAwEBAQAAAAAAAAAAAAAAAQID
+        BAUG/8QAMhEBAAECAgcGBgMBAQEAAAAAAAECAwQREhMUITFRUhVTYZGh4QVBgbHR8CIyccHxQv/aAAwD
+        AQACEQMRAD8AgL3XwggICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgI
+        CAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg3ChxMlE1XbFGcJyl7wOJkouo7YmcGUnA4mSi6
+        jtiZwZScDiZKLqO2JnBlJwOJkouo7YmcGUnA4mSi6jtiZwZScDiZKLqO2JnBlLw0OJkomq7YmcGUsRR3
+        nAx+q5Srm94M/Jv1XbEM4ODPyb9V2xDODgz8m/VdsQzg4M/Jv1XbEM4ODPyb9V2xDODgz8m/VdsQzg4M
+        /Jv1XbEM4Yb2eqdBQzN7d1XaChnBvbuq7QUM4N7d1XaChnBvbuq7QUM4N7d1XaChnBvbuq7QUM4N7d1X
+        aChnDEhEiAgICAgICAgICAAg7OqarbCaCQC8853QehvQFjVVm1ppyWKqsICAgICAgINUaFPOpiclK6Iq
+        Qlq5BAQEBAQEGuNBDhb3HGFOYqntkSDiVh4gICAgICDGJDDhIhExOSsjQ7kkf7JQ1ic2CJEBAQEBAQEB
+        BIq0f80P6jPyCieCY4u7WDYQEAlBXRq7gNMruf8AaC4acCtoyrpQQa8gOMruX9wLRpwJoyaULEHGqrCA
+        gIIEXnHOVrHBx1f2lipVRI1ZQm2F8z8tv8ItoywZW0I+8RnBUmjKYxwImCCMRFoUIZIgQEFZTeee7+Fe
+        OA0INcSO0YT5otETLAUtvSdCZmjLc1wNoM0Q9RAgIIFP5wzeZUS0o4IyLiAgICAgICAgk1Z7aF9Rn5BR
+        PBMcXdLBsIBKDjq4rUxSQCRDGAdb5nbFtTTkyqqzVqsqILKp61MJwBJMM4R1fmbsVaqc1qasnYgztHdm
+        WLUQEECLzjnK1jg46/7S56tqwLiWNPJFhI944+5WWppVilcQSKFTHQzMYPebiP8AlQiYzdPCiBwDhgIm
+        FDJmiBBWU3nnu/hXjgKymUj3R3nySV6afmhqGggyhxC0zH/qImM1nCiXQmP9KllMZM0QIIFYc4ZvMqJa
+        UcEZFxAQEBAQEBAQSas9tC+oz8gongmOLulg2EFdugilsB0scm9xNvhNWp4q1cHGrZk7H+mtXwosWK6I
+        xryxrLgOAcAXEzdI4xIaVx4uuqmIiHr/AAizRXXVNUZ5ZZPf6l1fChRITobGsL2vuw0BoNyWydIY+Ubf
+        0TCV1VRMSn4vZooqpmmMs883GrseO7Lc9FuoDZ+7NvcDZ4SWNXFrTwWKqsIKqsoly2I4YQHSz4lrTwcl
+        X9nIq7R0W4Kgw41LDYrQ5oY9wa61rnAgCYx4SZfoufE1TTRueh8MtUXL+VcZ7l//AFMq2CyFDishsY8x
+        Lg3ADbplw42gYZFrdKwwldU1TEzud/xezbpopriMpzy9Hz5d7wF9UESbC3odZmI2zUSzr4rRQoIKynHl
+        nMP4Vo4CgJnajdabl6KyLS4MOIJsc/lA4DJpIac5AHesr1U00TMOrBW6bl+mmrg7zd/VMBtEdEbBhscw
+        suCxrWGReGltmESJsXFhrlU3Mpl7fxOxajDzVFMRMZZZf6+Xr0nzSXV7sI71MKVpqMxBArDnDN5lRLSj
+        gjIuICAgICAgICCTVntoX1GfkFE8Exxd0sGwgrt0EIugOlik7uBt8Jq1PFWrg41bMn0rcnUEKivEZ1Nh
+        l9yQWMcwMtwgkmbpGXRgXnX71VyNGKdz6PA4OixVpzXv5Rw93u6vc/CpTzGbTYbX3IaGvcww7MABBm20
+        npwpZvVW40Zp3JxuDoxFWnFe/wBHzQL0Xzbstz0K5gNn703dxNnhJY18WtPBYqqwgqqyh3TYjRhIdLPi
+        WtPByVf2lyKu0d1uP3PQ2GFSolNY10g9sNjmAgEc17icYMiJDHauG/emc6Ipe5gMFRTo3qq9/HKP3zXm
+        6qqIFMuTw1jHMBDRdMcy3CS2YM7BbNY2blVv/wCXbjcNbxOX88pjyfLaTBLHuYS0lrnNJaZtJBlNpxhe
+        nE5xm+YrpmiqaZ+S6qCHJhd0uszAbZpLGvitFCggrKcOWcw/hWjgKAiViN3V7lNzbIrWUiJTGwpOmxrS
+        0RJsdY4uceTaOgrlv3ppzpiM3q4HBU1xF2qvLlHz3O03TUKBS4YYaW1ly66Fy9haXSlymk24TjC47NVV
+        uc8nsYu1axFGjNeX1fK61oO8xXQrtj7kiT2WtcCAQRpwL06KtKnN8vftaq5NGeeXzgq9uE9y0hz1pqMx
+        BArDnDN5lRLSjgjIuICAgICAgICCTVntoX1GfkFE8Exxd0sGwgEIOOriqjCMwCYZwHDc/K7atqas2VVO
+        SskrKkkFnU9VmK4EgiGMJ63yt2qtVWS1NObsQJWDuzLFqICCBF5xzlaxwcdf9pc9W1XlpL2ibTaQPdOx
+        WWpqVclK5JBJoVDdEMhYMbsQ/wAqETOTp4UMNAaMAEgoZM0QIKym88938K8cBWUyj+8O8eaL01fJCkoa
+        EkGcKGXGQH+ERM5LOFDuRIf6VLKZzZogQQKw5wzeZUS0o4IyLiAgICAgICAgk1Z7aF9Rn5BRPBMcXdLB
+        sICAQgro1RwHGdxc/wBpLRowK2lKujBBqOA224uv7iXDRgTSk0YWIErAqrCAgIIEXnHOVrHBx1/2lipV
+        Q41WwnWlkj8sx4CxStpSxZVMIe6TnJQ0pTGNAEgAB0CwKEMkQICCspvPPd/CvHAaEGuJAacI8kWiZhgK
+        I3oOlMjSlua0CwCSIeogQEECsOcM3mVEtKOCMi4gICAgICAgIJNWe2hfUZ+QUTwTHF3SwbLOi02C1oDq
+        OHEYTZasKrdcznFT0LOJw9NERVbznm23xgdlH2qNXc6mm14XuvsXxgdlH2pq7nUbXhe6+xfGB2Ufamru
+        dRteF7r7F8YHZR9qau51G14XuvsXxgdlH2pq7nUbXhe6+xfGB2UfamrudRteF7r7MItPgFpAowBIIB5N
+        hlYVMW7mf9la8VhppmItb/oqlu81Lh1lR2gNdRA5wEnO5PKOMrObVyd8VOqnGYSmIpqs5zHGd297fWi9
+        iboYmpu9aduwXcfYvrRexN0MTU3es27Bdx9i+tF7E3QxNTd6zbsF3H2L60XsTdDE1N3rNuwXcfYvrRex
+        N0MTU3es27Bdx9i+1F7E3QxNTd6zbsF3H2UTjaup488Umj1rRobbmJQxEeJzeQy2ZmMPQJBY12rlU501
+        ZQ9HDYrDW7cU3LWlPPc239oXw5uiGq6i91t9uwXcfYv7QvhzdENNRe6zbsF3H2L+0L4c3RDTUXus27Bd
+        x9i/tC+HN0Q01F7rNuwXcfYv7QvhzdENNRe6zbsF3H2L+0L4c3RDTUXus27Bdx9nO02K10RzmMuGlxLW
+        2ckYhYuqmJimIl5V2qmquaqYyieEclVWHOGbzKSUcEZFxAQEBAQEBAQSas9tC+oz8gongmOLulg2WFHq
+        eI9oe24kcEyZ/wALGq9TTOUu618PvXKIrpyynxbbwxfk0nYo2ihfsu/4efsXhi/JpOxNooOy7/h5+xeG
+        L8mk7E2ig7Lv+Hn7F4YvyaTsTaKDsu/4efsXhi/JpOxNooOy7/h5+xeGL8mk7E2ig7Lv+Hn7MYlSRWgu
+        NxIAk2nABmSL9Ezkir4beppmqct3j7KxbvPSG7nYzxdje5OtE3EGR6bFTaaKd0t6fhOIuRp05ZTv4+z3
+        ixH/AGtY7E2u34p7FxPh5+xxYj/tax2JtdvxOxcT4efscWI/7WsdibXb8TsXE+Hn7HFiP+1rHYm12/E7
+        FxPh5+xxYj/tax2JtdvxOxcT4efscWI/7WsdibXb8TsXE+Hn7KUiVi6XlTGU5N0LczHjjfWb3cmwXTiD
+        ZYbJdIWVWJoonRl34f4bfv24uUZZeM+zPiXSemDrO9Krtlvxbdi4nw8/Y4l0npg6zvSm2W/E7FxPh5+x
+        xLpPTB1nelNst+J2LifDz9jiXSemDrO9KbZb8TsXE+Hn7HEuk9MHWd6U2y34nYuJ8PP2OJdJ6YOs70pt
+        lvxOxcT4efsoaXRzDe6G6V00lplaJjoK6aaoqiJh5t23NuuaKuMKusOcM3mUko4IyLiAgICAgICAgk1Z
+        7aF9Rn5BRPBMcXdLBszEQ9Y6SoyhaK6o4Sb67rO0lNGORrKuc+Zvrus7SU0Y5Gsq5z5m+u6ztJTRjkay
+        rnPmb67rO0lNGORrKuc+Zvrus7SU0Y5Gsq5z5m+u6ztJTRjkayrnPmb67rO0lMoNOrn6sFKqHFjOBPLd
+        h6StIpjLg5qrlUTMZz5sd/d13axU6McldbX1T5m/u67tYpoxyNbX1T5m/u67tYpoxyNbX1T5m/u67tYp
+        oxyNbX1T5m/u67tYpoxyNbX1T5m/u67tYpoxyNbX1T5sFKivpcdwcQHuAssDiBg6FaKYn5LRcqjdEzH1
+        aeEvyj9Z21NGOSdbX1T5ycJflH6ztqaMcjW19U+cnCX5R+s7amjHI1tfVPnJwl+UfrO2poxyNbX1T5yc
+        JflH6ztqaMcjW19U+cnCX5R+s7amjHI1tfVPnLAmdpJP6m0lSrnnvV9Yc4ZvMqJXo4IyLiAgICAgICAg
+        k1Z7aF9Rn5BRPBMcXdLBss6LWbWtDTR2OIxmUz4LCq1MznpPQs42i3RFM24nL5/sNt+Gdlh+HpUaiepp
+        2hb7qP36F+Gdlh+HpTUT1HaFvuo/foX4Z2WH4elNRPUdoW+6j9+hfhnZYfh6U1E9R2hb7qP36F+Gdlh+
+        HpTUT1HaFvuo/foX4Z2WH4elNRPUdoW+6j9+jCLWzC0jgzBMETErJjDzVMWZic9JWvH0VUzGqj9+iqW7
+        zUuHXbGgNNEhuLRIuJE3SxnkrObEzv0nVT8St0RFM2onL58/Rlxgh9ihaW+lNmq65T2rb7mP36HGCH2K
+        Fpb6U2arrk7Vt9zH79DjBD7FC0t9KbNV1ydq2+5j9+hxgh9ihaW+lNmq65O1bfcx+/Q4wQ+xQtLfSmzV
+        dcnatvuY/focYIfYoWlvpTZquuTtW33Mfv0ULjaup48znOaVR6/ZBbvbqHCiET5biJmZnjacE5YVjXYm
+        uc4qyejhviFNm3FE2oq8Z/8AJbONcL4dA0t9CrstXXP79W/a1Hcx5+xxrhfDoGlvoTZauuf36na1Hcx5
+        +xxrhfDoGlvoTZauuf36na1Hcx5+xxrhfDoGlvoTZauuf36na1Hcx5+xxrhfDoGlvoTZauuf36na1Hcx
+        5+xxrhfDoGlvoTZauuf36na1Hcx5+znabHD4jnhgYHOJDRgaDiFgXVTGjTEPKu1xcrmuIyz+XJVVhzhm
+        8yklHBGRcQEBAQEBAQEEmrPbQvqM/IKJ4Jji7pYNkyr6ufFnKQAwuOCfQOkrO5diji6sNhK78/x4c1hx
+        cOVGqdqx2mOTu7Iq6/T3OLhyo1TtTaY5HZFXX6e5xcOVGqdqbTHI7Iq6/T3OLhyo1TtTaY5HZFXX6e7G
+        JueeBZEaT0EFvjapjEx84Vq+E1xH8aon0U72kEgiRFhBxFdETnveVVTNMzE8WmDHa7mmeDERYcBE8IPS
+        pyQ2ILCDuZc9ofvwF0A6VyTKdspzWM4qKZyyd1Hwaq7TFenlnv4e7Pik7Lt1D6k2yOXqv2DV3np7nFJ2
+        XbqH1JtkcvU7Bq7z09zik7Lt1D6k2yOXqdg1d56e7F+5J8rIzSegtIGmZSMZHJWfgVeW6uPL3lRUmjuh
+        uLHiThh2j9F1U1RVGcPGu2q7Vc0VxlMIzIwJkDaJ4jiMjI47VZRsRCwoe5R1IYIojhs5iRYXSuTLDMdC
+        57mKi3Vo5PWwnwqrEWouRXlnnuy5TlzbuIbu0t/6z6lTbo6fV09g1d56e5xDd2lv/WfUm3R0+p2DV3np
+        7nEN3aW/9Z9SbdHT6nYNXeenuHcG/FSW6hH/ANJt0dPqifgVXeR5e7mq0q2JR373EAnhBFrXN6Wlddu5
+        TcjOl5OIw1zD16Fz2lCuxOX+6VdgyRCBWHOGbzKiWlHBGRcQEBAQEBAQEEmrPbQvqM/IKJ4Jji7pYNnQ
+        1ZdOor2QnhsWTw1x915ncuPhoXHe3XImrg9/ATNWFmm3OVW/z+SNHq+nmiQ4baUwUgPm9+J0ObpNurnC
+        JtxWy0xFdrTmZjc1qtYrURTFcafznw8v+JkeiUs0qE9sdm8NZKKyUi58jMgSxktx2S00iq3oTGW9rVbv
+        66mqKv4/OGqiUKmh1Ku6Swh91wWye9E3VySJWSm2y3Bpmarf8co/1Wi3iIm5pVcf6+H79UaJV1YcEZDF
+        KYKQIk3PxGHbJt1c4eacGKWe0V2tOZy3M5s4vURTFcaefHw8nSwwZCZmZCZFkzK0yXPL0Izy3uL3SvLn
+        Rt7w3JDZSteGSs716NiMqYzfLY+qKr9U0/u5QVLDjB//ACB4bvYHLLTywRgliwrarL5OOnP5rhVWW9Eo
+        VMNEiNbSGh73B1HOTg8nkEysMrrEZTw9HHXVb1m+N3zfQYa3iJwuUVb5/r4Q3Umg04ii3NJYCyXCTKyJ
+        gmRybbA4Ssw6KxVb/lnH+Nq7WJmLeVUbv7eP79EiFRaUKW+IY7TRyyTIfvB0hil0hxnPHorNVGriMt7S
+        mi/r5qmr+GW6EKj1dTxRozHUphjOcDBeMDWzF0J3NkxPEZK812tOJiN3zY02cVFqqma40vlK7qyHEbCY
+        2K8PiBoD3DAXYysa5iap0eDstRXFERXOc/Nyu66K0xgBhawB2eZIGgjSvQwkTFG98x8arpqxERHGI3uO
+        q9kYPbdB8uVdTLZTMyJd8l1PLnLJbqFHR7mqNSTCjFsZoa9pFHBt3uKLoF5ssF1IytXBiZo043f6+m+E
+        0XtnnKrdOej4Tv8A+/62xaurDgjIYpTBSA+b34jDtk26ucPNODFLPnFdrTmctzrmzi9RFMVxp58fDy/4
+        m0iiUs0mC9sdggtZKMyUi99syBLHNuOyWmkVW9CYmN/ybVW783qaoq/j84a6PQqaH0kupLC14dwYSnvT
+        jO4JErJWdM5TUzVbypyj/VabeIiq5nVun+vgmVBR47IIbSIgiRJum4W8mdgnIT0KtyaZqzpjc2w1N2m3
+        EXZzlzP9RYzS6Cyy6AeT0hpuQJ5yDoXZgonKZ+Tw/jtdMzRT89/lu/fo4MNfdY5XX6Suf/F3PD3ZJaKI
+        FYc4ZvMqJaUcEZFxAQEBAQEBAQSat9tC+oz8gongmOLulg2bIEdzDNriD+nn0qs0xVule3crtznROUpV
+        942UOhuxU1NHJ07fiOr0j8F942UOhuxNTRyNvxHV6R+C+8bKHQ3Ympo5G34jq9I/BfeNlDobsTU0cjb8
+        R1ekfhjErOM4SMR0v0kPEBTFqiPkrVjb9UZTV/z7Ia0cogIF+Y7eS2KQBYBJlgGLAmotzvmE9oYmj+NN
+        e6PCPwX9pGWOqzYmz2+R2ni+v0j8F/aRljqs2Js9vkdp4vr9I/Bf6kZY6rNibPb5HaeL6/SPw8fXdIIl
+        vzu4NB0gTSMPb5In4lipjKa59Pwryf8AP6lbOLiIgQYmvKRC5EOMWtGAXLDKdptInhKrNm3Vvqh1Wsbi
+        LVOhRVlH+R+HnGel9oOrD9KjZrXJr2ni+v0j8HGel9oOrD9KbNa5HaeL6/SPwcZ6X2g6sP0ps1rkdp4v
+        r9I/Ad09L7Q7Vh+lNmtdKO08X1+kfhVRYrnEuc4ucbSXEkk/qStoiIjKHHVVNU6VU5yxRUQQKw5wzeZU
+        S0o4IyLiAgICAgICAg9Y4ggjCCCM4wIO5q+mtisDm4feGNruhYTGTaJzSVCRAQEBAQEBBjEfIT0fqpiM
+        1aqophAJWrkEQICAgICDGI8ATKCpiPmSelXGKAgICAgIPCZWlEqykRLp09GZQ1iMoa0SICAgICAgICAg
+        zgxXNN01xaekGRUCaK6j5U6rNijRhOlJfuPlftZsTRg0pL9x8r9rNiaMGlJfuPlftZsTRg0pL9x8r9rN
+        iaMGlJfuPlftZsTRg0pL9x8r9rNiaMGlJfqPlTqs2JowaUtZrSNlCc4afJTlCsxnxL5xcp4N2JkjRgvn
+        Fyng3YmRowXzi5TwbsTI0YL5xcp4N2JkaMF84uU8G7EyNGC+cXKeDdiZGjBfOLlPBuxMjRhqdTIhwvJz
+        yUmjDzhL+t4BDRg4S/reAQ0YOEv63gENGDhL+t4BDRg4S/reAQ0YOEv63gENGDhL+t4BDRhrfEJwklEx
+        EQxRIgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIC
+        AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIP
+        /9k=
+</value>
+  </data>
 </root>
